vlib/v/parser/tests/pub_interop_func_err.out
vlib/v/parser/tests/pub_interop_func_err.vv:1:1: error: interop function cannot be public
    1 | pub fn C.printf(s string)
      | ~~~
