vlib/v/parser/tests/pub_interop_func_err.vv
pub fn C.printf(s string)
